--- a/Story_1.1.html
+++ b/Story_1.1.html
@@ -11,14 +11,21 @@
 	<section class="illustration">
 		<img src="1.1.png" alt="a small table sitting next to a window. It's night time now." Width="480" Height="360">
 	</section>
-	<p>
+	<p class="body">
 		Holy shit, you slept for another 12 hours. It's dark out now,
 		But You're wide awake. It's Saturday night, so you could go to the bar.
 		Or you could spend the night in, turn on the TV and relax.
 	</p>
+	
+	<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+	<button id="minus">-</button></p>
+	
 	<section class="options">
 		<a href="Story_2.2.html">Go To Bar</a>
 		<a href="Story_2.1.html">Watch TV</a></section>
 	</section>
+
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 </body>
 </html>
