--- a/Story_1.2.html
+++ b/Story_1.2.html
@@ -12,17 +12,23 @@
 		<img src="1.2.png" alt="A large Fridge, with very little in it, and some cereal on a table." Width="480" Height="360">
 	</section>
 	
-		<p>
+		<p class="body">
 			No time to waste, you hop out of bed and head for the kitchen.
 			You look in the fridge, but there's not much there. You forgot to go
 			grocery shopping yesterday. On the counter there's a box of Alphabits cereal.
 			It wouldn't be the worst thing in a pinch. You remember that fancy cafe that
 			just opened, maybe you could try it?
 		</p>
+
+<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+<button id="minus">-</button></p>
 	
 	<section class="options">	
 			<a href="Story_2.4.html">Go to Cafe</a>
 			<a href="Story_2.3.html">Make Cereal</a>
 	</section>
+	
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 	</body>
 </html>
