--- a/Story_2.1.html
+++ b/Story_2.1.html
@@ -12,17 +12,24 @@
 	<section class="illustration">
 	<img src="2.1.png" alt="The News Anchor reaches out of the screen and tries to grab you!" Width="480" Height="360">
 	</section>
-	<p>
+	<p class="body">
 		What The Fuck!?! As you sit there watching the news you loose focus,
 		and fiddle with the remote. You are startled by a <b>loud human shriek!</b>
 		You look up and the news anchor who was speaking just a few moments ago
 		is now coming out of the TV and making swiping, grabbing motions while
 		looking directly into your eyes. He looks mad, but also... frightened.
 		</p>
+	
+<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+<button id="minus">-</button></p>
+
 	<section class="options">
 		<a href="Story_3.2.html">Grab His Hand</a>
 		<a href="Story_3.1.html">Fight The Anchor</a>
 	</section>
 </section>
+	
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 </body>
 </html>
