--- a/Story_2.2.html
+++ b/Story_2.2.html
@@ -14,17 +14,25 @@
 		<img src="2.2.png" alt="A bar with drinks strewn about. Behind the counter there are liquor bottles." Width="480" Height="360">
 	</section>
 		
-	<p>
+	<p class="body">
 		This bar was a rude wake up call: it's loud, crowded, and kinda stinky.
 		There's a crowd of people hovering around a karaoke machine singing <i>Sweet Caroline</i>.
 		They're super drunk, but they do look like they're having fun. It wouldn't hurt
 		to get out of your comfort zone a bit and join them. Then again, you always feel
 		comfortable just sitting in the corner and watching people out the window.
 		</p>
+	
+<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+<button id="minus">-</button></p>
+	
 	<section class="options">
 		<a href="Story_3.4.html">Drink Alone</a>
 		<a href="Story_3.3.html">Karaoke!</a>
 	</section>
 </section>
+	
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
+	
 </body>
 </html>
