--- a/Story_2.3.html
+++ b/Story_2.3.html
@@ -11,7 +11,7 @@
 	<section class="illustration">
 		<img src="2.3.png" alt="In your bowl of Alphabits cereal, the words It Is I, God Form." Width="480" Height="360">
 	</section>
-	<p>
+	<p class="body">
 		You pour your cereal in to a bowl and add milk. About half way through
 		your meal, you look down and see something peculiar: the letter shaped cereal
 		pieces spell out your name. A moment later, they rearange and read a different
@@ -21,9 +21,15 @@
 		it is time for you to attend your heavenly duties. This whole thing sounds a little
 		bit like a scam, but then, maybe it's true. Will you heed god's call?
 	</p>
+
+	<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+	<button id="minus">-</button></p>
+	
 	<section class="options">	
 		<a href="Story_3.6.html">Heed God's Call</a>
 		<a href="Story_3.5.html">Throw Cereal Bowl</a>
 	</section>
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 </body>
 </html>
