--- a/Story_2.4.html
+++ b/Story_2.4.html
@@ -11,7 +11,7 @@
 	<section class="illustration">
 	<img src="2.4.png" alt="A reciept reads 'Big Money Breakfast' with a price in the hundreds." Width="480" Height="360">
 	</section>
-		<p>
+		<p class="body">
 		My god that was a tasty breakfast: the bread was so fresh you could 
 		smell it from the kitchen, The berries were picked from the roof-top garden, 
 		and the yolk from the free-range eggs ran like a river onto your buttered toast.
@@ -21,9 +21,15 @@
 		debt washing dishes. That's not so bad, but the again, you could just leave. 
 		What are they going to do, call the cops?
 	</p>
+
+	<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+	<button id="minus">-</button></p>
+	
 	<section class="options">
 	<a href="Story_3.8.html">Run</a>
 	<a href="Story_3.7.html">Work Off Debt</a>
 	</section>
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 </body>
 </html>
