--- a/Story_3.1.html
+++ b/Story_3.1.html
@@ -12,7 +12,7 @@
 	<section class="illustration">
 	<img src="3.1.png" alt="An empty living room, with the TV still on." Width="480" Height="360">
 	</section>
-		<p>
+		<p class="body">
 			You try to kick at the raving news anchor, but he is swifter
 			than you assumed. He grabs your leg with a vice grip, and no
 			matter how you struggle, he pulls harder and harder. You look 
@@ -24,9 +24,15 @@
 			time to wonder how this happened, you're on air in thirty seconds. 
 			Who is going to take care of your cat?
 		</p>
+
+	<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+	<button id="minus">-</button></p>
+	
 	<section class="options">
 		<a href="Story_4.html">Continue</a>
 	</section>
 </section>
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 </body>
 </html>
