--- a/Story_3.2.html
+++ b/Story_3.2.html
@@ -12,7 +12,7 @@
 	<section class="illustration">
 		<img src="3.2.png" alt="On the TV screen, the news declares that their anchor has gone missing." Width="480" Height="360">
 	</section>
-		<p>
+		<p class="body">
 		You grab the man by his neck tie, and pull as hard as you can. 
 		He slides out of the TV set, and wiggles around on the floor for 
 		moment while he loosens his tie. He gets up and explains that he
@@ -22,9 +22,15 @@
 		in his eyes, he's not joking. You grab two beers out of the fridge,
 		give him one, and ask him what the hell is going on?
 		</p>
+
+	<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+	<button id="minus">-</button></p>
+	
 	<section class="options">
 		<a href="Story_4.html">Continue</a>
 	</section>
 </section>
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 </body>
 </html>
