--- a/Story_3.3.html
+++ b/Story_3.3.html
@@ -12,7 +12,7 @@
 	<section class="illustration">
 		<img src="3.3.png" alt="Four people stare at you, amazed, saying WOW!" Width="480" Height="360">
 	</section>
-	<p>
+	<p class="body">
 			You're tired of holding back, you want to be the guy who
 			turns heads, and that starts tonight. You push your way through
 			the crowd and call next on the mic. It's your turn, and the song
@@ -25,10 +25,17 @@
 			can't tell if they loved it or hated it, but they're screaming and
 			carrying you around the bar. One thing is certain, 
 			you turned some heads.
-		</p>
+	</p>
+
+	<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+	<button id="minus">-</button></p>
+	
 	<section class="options">
 		<a href="Story_4.html">Continue</a>
 	</section>
 </section>
+
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 </body>
 </html>
