--- a/Story_3.4.html
+++ b/Story_3.4.html
@@ -12,7 +12,7 @@
 	<section class="illustration">
 		<img src="3.4.png" alt="A table by a window, and a surreal clock." Width="480" Height="360">
 	</section>	
-		<p>
+		<p class="body">
 			As you order another Old Fashioned, and look out the window, you notice 
 			things seems to be moving faster than normal. You swivel back around and 
 			find that that bar has cleared out. You're alone, and you have to pee. 
@@ -20,10 +20,16 @@
 			You see a reflection of yourself, only it's not the <i>You</i> you know. You're the 
 			same person, but between the window and the bathroom you must've aged 40 years.
 		</p>
+
+	<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+	<button id="minus">-</button></p>
 	
 	<section class="options">
 		<a href="Story_4.html">Continue</a>
 	</section>
 </section>
+
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 </body>
 </html>
