--- a/Story_3.5.html
+++ b/Story_3.5.html
@@ -11,13 +11,20 @@
 	<section class="illustration">
 		<img src="3.5.png" alt="A Cereal bowl on the ground, it's contents have been smeared on the wall" Width="480" Height="360">
 	</section>
-	<p>
+	<p class="body">
 		You Hurl the bowl at the wall, hoping this is all some kind of a joke.
 		When it lands, the cereal on the wall spells 'Big Mistake Dude'. I don't know
 		what you have done, but it's probably not good.
 		</p>
+
+	<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+	<button id="minus">-</button></p>
+	
 	<section class="options">
 		<a href="Story_4.html">Continue</a>
 	</section>
+
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 </body>
 </html>
