--- a/Story_3.6.html
+++ b/Story_3.6.html
@@ -12,7 +12,7 @@
 	<section class="illustration">
 		<img src="3.6.png" alt="A stack of books titles 'Being Gods Kid' lies on a atable with a sign that reads 'Book Signing'." Width="480" Height="360">
 	</section>
-		<p>
+		<p class="body">
 		You heed God's word, and what do you know? You're a star!
 		You're like a Kardashian or something. All of a sudden the world 
 		wants to know what you're up to. So, you write a book, and it's
@@ -21,8 +21,15 @@
 		bad days, but this worked out pretty well. To think, you almost
 		threw it all away, literally.
 		</p>
+
+	<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+	<button id="minus">-</button></p>
+	
 	<section class="options">	
 	<a href="Story_4.html">Continue</a>
 	</section>
+
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 </body>
 </html>
