--- a/Story_3.7.html
+++ b/Story_3.7.html
@@ -11,7 +11,7 @@
 	<section class="illustration">
 		<img src="3.7.png" alt="A big heart, surrounded by breakfast food items." Width="480" Height="360">
 	</section>	
-		<p>
+		<p class="body">
 		So you hit the kitchen and start washing, cursing yourself 
 		for not being more careful. You look over and see a woman, she's smiling.
 		You talk to her, and ask her how long she's worked here. She says she
@@ -21,8 +21,15 @@
 		all done, neither of you are ready to leave. So you make plans to 
 		not-check-the-price again next weekend.
 		</p>
+
+	<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+	<button id="minus">-</button></p>
+	
 	<section class="options">
 		<a href="Story_4.html">Continue</a>
 	</section>
+
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 </body>
 </html>
