--- a/Story_3.8.html
+++ b/Story_3.8.html
@@ -11,14 +11,21 @@
 	<section class="illustration">
 		<img src="3.8.png" alt="A Police Badge Surrounded By Bars." Width="480" Height="360">
 	</section>	
-		<p>
+		<p class="body">
 		They called the cops. Your 25 year dine-and-dash 
 		streak comes to a crashing end. As the cop puts you in
 		the cruiser, he says he hopes it was worth it. 
 		Well, the bread was pretty damn fresh.
 		</p>
+
+	<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+	<button id="minus">-</button></p>
+	
 	<section class="options">	
 		<a href="Story_4.html">Finish</a>
 	</section>
+	
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 </body>
 </html>
