--- a/Story_4.html
+++ b/Story_4.html
@@ -13,17 +13,27 @@
 	
 	<section class="whitestripe">
 		<section class="image">
-			<img src="Fin.png" alt="Happy and sad Masks" width="320" Height="240">
+			<img id="faces" src="Fin.png" alt="Happy and sad Masks" width="320" Height="240">
 		</section>
 	</section>
 	
 	<section class="body">
-		<p>
+		<p class="body">
 		Congradulations, you have finished your story. 
 		<br>There are 8 endings in total, which one did you get?
 		<br>If you want, you can restart and make different choices.
 		</p>
+		
+		<p class="textadjust">ADJUST FONT SIZE:</p>
+		<button id="plus">+</button>
+		<button id="minus">-</button>
+		<br>
+
+		
 			<a href="index.html">Restart</a>
 	</section>
+	
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>	
 </body>
 </html>
