--- a/Story_0.1.html
+++ b/Story_0.1.html
@@ -11,13 +11,20 @@
 	<section class="illustration">
 		<img src="0.png" alt="a small table sitting next to a window. On it, an alarm clock reads 8:30" Width="480" Height="360">
 	</section>
-		<p>
+		<p class="body">
 			You awake to the sound of your alarm clock, and the sight of sunlight coming through your window.
 			Today is Saturday, you don't work, You can choose to spend the day however you like.
-		</p>	
+		</p>
+
+	<p>ADJUST FONT SIZE: 	<button id="plus">+</button>
+	<button id="minus">-</button></p>
+	
 	<section class="options">	
 			<a href="Story_1.2.html">Get Up</a>		
 			<a href="Story_1.1.html">Sleep In</a>
 	</section>
+
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 </body>
 </html>
