--- a/index.html
+++ b/index.html
@@ -14,19 +14,28 @@
 
 	<section class="whitestripe">
 		<section class="image">
-			<img src="Fin.png" alt="Happy and sad Masks" width="320" Height="240">
+			<img id="faces" src="Fin.png" alt="Happy and sad Masks" width="320" Height="240">
 		</section>
 	</section>
-	
-	<section class="body">
-		<p>
-		My name is Riley Klassen, and this is my first exploration of <code>coding</code> as a storytelling method.
-		The way this works is simple, once you click the start button you will be presented with a story card, 
-		which includes an image and text. You will have two options as to how you would like the story to progress, 
-		each with its own path. There are a total of 8 different, surreal endings. <em>Enjoy</em>
-		</p>
-		<a href="Story_0.1.html">Click Here to Begin</a>
-	</section>
 
+<section class="body">
+	<p class="body">
+	My name is Riley Klassen, and this is my first exploration of <code>coding</code> as a storytelling method.
+	The way this works is simple, once you click the start button you will be presented with a story card, 
+	which includes an image and text. You will have two options as to how you would like the story to progress, 
+	each with its own path. There are a total of 8 different, surreal endings. <em>Enjoy</em>
+	</p>
+		
+
+			<p class="textadjust">ADJUST FONT SIZE:</p>
+			<button id="plus">+</button>
+			<button id="minus">-</button>
+			<br>
+	
+	<a href="Story_0.1.html">Click Here to Begin</a>
+</section>
+
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="../IndexAnimate.js"></script>
 	</body>
 </html>
